Ajuste de la vista del proyecto Web XXXXX 29-09-2021

--- a/ModeloSitioWeb1.html
+++ b/ModeloSitioWeb1.html
@@ -36,10 +36,10 @@ body {
 <div id="container">
   <div id="mainContent">
     <p align="center"><img src="imagenes/logoCUN.jpg"  alt="Universidad EAN" longdesc="http://www.ean.edu.co" /></p>
-    <h1>Universidad EAN - Desarrollo Web</h1>
-    <p><strong>Docente: Arquitecto Jaime Alberto Gutiérrez Mejía. 2018</strong></p>
+    <h1>Universidad Sergio Arboleda - Desarrollo Web</h1>
+    <p><strong>Docente: Arquitecto Jaime Alberto Gutiérrez Mejía. 2021</strong></p>
     <p>
-		<h2>EJEMPLO DE FUNCIONES CON ALCANCE LOCAL A TODO EL SCRIPT</h2>
+		<h2>EJEMPLO DE FORMULARIO HTML PARA EL PROYECTO DE FRONT END DEL CURSO DE FASE III</h2>
 		Número 1:  <input type="text" id="numero1" name="numero1"/>
 		<br/>
 		Número 2:  <input type="text" id="numero2" name="numero2"/>
